--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Alobar Workout</string>
+
+    <string name="drawer_open">Open menu</string>
+    <string name="drawer_close">Sluit menu</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Navigation</string>
 </resources>
