--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_close">Close menu</string>
 
     <string name="exercise_add">Add</string>
+    <string name="exercise_save">Save</string>
     <string name="exercise_name_hint">Name</string>
     <string name="exercise_weight_hint">Weight</string>
     <string name="exercise_dialog_title">Exercise</string>
